--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Apr 17 20:35:41 CST 2017
-sdk.dir=/Users/yisheng/Library/Android/sdk
+#Fri Apr 21 16:20:09 CST 2017
+ndk.dir=D\:\\software\\Android\\sdk\\ndk-bundle
+sdk.dir=D\:\\software\\Android\\sdk
