嗨呀 主页的订单详情
配置可能发生了变化 如果你们同步后程序出现崩溃我也很绝望

--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Apr 17 20:35:41 CST 2017
-sdk.dir=/Users/yisheng/Library/Android/sdk
+#Fri Apr 21 16:30:31 CST 2017
+sdk.dir=F\:\\software\\Android\\sdk
