已结合王镇宇与我的界面们的版本

--- a/local.properties
+++ b/local.properties
@@ -7,11 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-<<<<<<< HEAD
-#Fri Apr 21 16:30:31 CST 2017
-sdk.dir=F\:\\software\\Android\\sdk
-=======
-#Fri Apr 21 16:20:09 CST 2017
-ndk.dir=D\:\\software\\Android\\sdk\\ndk-bundle
-sdk.dir=D\:\\software\\Android\\sdk
->>>>>>> origin/master
+#Sun Apr 23 18:13:54 CST 2017
+>>>>>>>=origin/master
+sdk.dir=/Users/yisheng/Library/Android/sdk
+=\=\=\=\=\=\=
+<<<<<<<=HEAD
