--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-        <activity android:name=".ui.SpalashActivity"
+
+        <activity android:name=".ui.LoginActivity"
          android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,6 +28,8 @@
 
         <activity android:name=".ui.MainActivity"
             android:screenOrientation="portrait" />
+        <!--<activity android:name=".ui.LoginActivity"-->
+            <!--android:screenOrientation="portrait" />-->
         <activity android:name=".ui.DetailsActivity"
             android:screenOrientation="portrait" />
         <activity android:name=".ui.ThemColorChangeActivity"
