--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,16 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
 
-        <activity android:name=".ui.LoginActivity"
+        <activity android:name=".ui.AccountLoginActivity"
          android:screenOrientation="portrait" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".ui.PhoneLoginActivity"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -28,7 +36,11 @@
 
         <activity android:name=".ui.MainActivity"
             android:screenOrientation="portrait" />
-        <!--<activity android:name=".ui.LoginActivity"-->
+        <activity android:name=".ui.RegistPhoneActivity"
+        android:screenOrientation="portrait" />
+        <activity android:name=".ui.RegistValidNameActivity"
+            android:screenOrientation="portrait" />
+        <!--<activity android:name=".ui.AccountLoginActivity"-->
             <!--android:screenOrientation="portrait" />-->
         <activity android:name=".ui.DetailsActivity"
             android:screenOrientation="portrait" />
