--- a/local.properties
+++ b/local.properties
@@ -7,8 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Apr 23 18:13:54 CST 2017
+#Mon Apr 24 11:16:04 CST 2017
 >>>>>>>=origin/master
-sdk.dir=/Users/yisheng/Library/Android/sdk
-=\=\=\=\=\=\=
+sdk.dir=F\:\\software\\Android\\sdk
 <<<<<<<=HEAD
+=\=\=\=\=\=\=
