--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <application
         android:name=".app.MaterialAplication"
         android:allowBackup="true"
-        android:icon="@drawable/sso_zhihu_logo"
+        android:icon="@drawable/runforyou_logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
