--- a/local.properties
+++ b/local.properties
@@ -7,9 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Apr 24 16:47:39 CST 2017
+#Mon Apr 24 21:21:27 CST 2017
 >>>>>>>=origin/master
-ndk.dir=D\:\\software\\Android\\sdk\\ndk-bundle
-sdk.dir=D\:\\software\\Android\\sdk
-=\=\=\=\=\=\=
+sdk.dir=/Users/yisheng/Library/Android/sdk
 <<<<<<<=HEAD
+=\=\=\=\=\=\=
