--- a/local.properties
+++ b/local.properties
@@ -7,8 +7,9 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Apr 30 10:05:11 CST 2017
+#Sun Apr 30 11:24:59 CST 2017
 >>>>>>>=origin/master
-sdk.dir=F\:\\software\\Android\\sdk
-=\=\=\=\=\=\=
+ndk.dir=D\:\\software\\Android\\sdk\\ndk-bundle
+sdk.dir=D\:\\software\\Android\\sdk
 <<<<<<<=HEAD
+=\=\=\=\=\=\=
