--- a/local.properties
+++ b/local.properties
@@ -7,9 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Apr 30 11:24:59 CST 2017
+#Wed May 03 14:49:21 CST 2017
 >>>>>>>=origin/master
-ndk.dir=D\:\\software\\Android\\sdk\\ndk-bundle
-sdk.dir=D\:\\software\\Android\\sdk
-<<<<<<<=HEAD
+sdk.dir=D\:\\Android\\Sdk
 =\=\=\=\=\=\=
+<<<<<<<=HEAD
