--- a/local.properties
+++ b/local.properties
@@ -7,9 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Apr 30 11:24:59 CST 2017
+#Thu May 04 00:45:28 CST 2017
 >>>>>>>=origin/master
-ndk.dir=D\:\\software\\Android\\sdk\\ndk-bundle
-sdk.dir=D\:\\software\\Android\\sdk
-<<<<<<<=HEAD
+sdk.dir=/Users/yisheng/Library/Android/sdk
 =\=\=\=\=\=\=
+<<<<<<<=HEAD
