--- a/local.properties
+++ b/local.properties
@@ -7,8 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed May 03 14:49:21 CST 2017
+#Thu May 04 15:52:24 CST 2017
 >>>>>>>=origin/master
-sdk.dir=D\:\\Android\\Sdk
-=\=\=\=\=\=\=
+sdk.dir=/Users/yisheng/Library/Android/sdk
 <<<<<<<=HEAD
+=\=\=\=\=\=\=
