--- a/local.properties
+++ b/local.properties
@@ -7,8 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu May 04 15:52:24 CST 2017
+#Mon May 08 16:16:35 CST 2017
 >>>>>>>=origin/master
-sdk.dir=/Users/yisheng/Library/Android/sdk
-<<<<<<<=HEAD
+sdk.dir=F\:\\software\\Android\\sdk
 =\=\=\=\=\=\=
+<<<<<<<=HEAD
