--- a/local.properties
+++ b/local.properties
@@ -7,8 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu May 04 15:52:24 CST 2017
+#Tue May 09 21:01:01 CST 2017
 >>>>>>>=origin/master
-sdk.dir=/Users/yisheng/Library/Android/sdk
-<<<<<<<=HEAD
+sdk.dir=D\:\\Android_SDK_windows
 =\=\=\=\=\=\=
+<<<<<<<=HEAD
