--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="xzh.com.materialdesign" >
+    package="xzh.com.materialdesign">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -14,44 +14,57 @@
         android:icon="@drawable/runforyou_logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
-
-        <activity android:name=".ui.AccountLoginActivity"
-         android:screenOrientation="portrait" >
+        android:theme="@style/AppTheme">
+        <activity
+            android:name=".ui.AccountLoginActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
-        <activity android:name=".ui.MainActivity"
+        <activity
+            android:name=".ui.MainActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".ui.PhoneLoginActivity"
+        <activity
+            android:name=".ui.PhoneLoginActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".ui.RegistPhoneActivity"
-        android:screenOrientation="portrait" />
-        <activity android:name=".ui.RegistValidNameActivity"
+        <activity
+            android:name=".ui.RegistPhoneActivity"
             android:screenOrientation="portrait" />
-        <!--<activity android:name=".ui.AccountLoginActivity"-->
-            <!--android:screenOrientation="portrait" />-->
-        <activity android:name=".ui.DetailsActivity"
+        <activity
+            android:name=".ui.RegistValidNameActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".ui.ThemColorChangeActivity"
+        <!-- <activity android:name=".ui.AccountLoginActivity" -->
+        <!-- android:screenOrientation="portrait" /> -->
+        <activity
+            android:name=".ui.DetailsActivity"
             android:screenOrientation="portrait" />
-
-        <activity android:name=".ui.OrderActivity"
+        <activity
+            android:name=".ui.ThemColorChangeActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".ui.ModifyActivity"
+        <activity
+            android:name=".ui.OrderActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.ModifyActivity"
             android:label="更改收货人"
             android:theme="@style/dialogstyle" />
-        <activity android:name=".ui.MyOrderActivity"
+        <activity
+            android:name=".ui.MyOrderActivity"
             android:label="我的订单"
             android:screenOrientation="portrait" />
-        <activity android:name=".ui.ReceiveOrderActivity"
+        <activity
+            android:name=".ui.ReceiveOrderActivity"
             android:label="接收订单"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.ReceiveDetailActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".ui.ContactActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity android:name=".ui.MyorderDetailAvtivity"/>
     </application>
 
 </manifest>
