--- a/local.properties
+++ b/local.properties
@@ -7,8 +7,9 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu May 04 15:52:24 CST 2017
+#Wed May 10 17:29:00 CST 2017
 >>>>>>>=origin/master
-sdk.dir=/Users/yisheng/Library/Android/sdk
-<<<<<<<=HEAD
+ndk.dir=D\:\\software\\Android\\sdk\\ndk-bundle
+sdk.dir=D\:\\software\\Android\\sdk
 =\=\=\=\=\=\=
+<<<<<<<=HEAD
