--- a/local.properties
+++ b/local.properties
@@ -7,8 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed May 10 19:17:44 CST 2017
+#Sun May 14 09:39:39 CST 2017
 >>>>>>>=origin/master
-sdk.dir=/Users/yisheng/Library/Android/sdk
-<<<<<<<=HEAD
+sdk.dir=D\:\\Android_SDK_windows
 =\=\=\=\=\=\=
+<<<<<<<=HEAD
