--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,11 +21,8 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.1'
     compile files('libs/android-support-design.jar')
     compile files('libs/android-support-v7-recyclerview.jar')
-    compile 'com.android.support:cardview-v7:23.1.1'
     compile files('libs/nineoldandroids-2.4.0.jar')
     compile files('libs/jackson-core-asl-1.9.9.jar')
     compile files('libs/okhttp-2.5.0.jar')
@@ -39,4 +36,8 @@ dependencies {
     compile files('libs/gson-2.2.4.jar')
     compile files('libs/EventBus2.4.jar')
     compile project(':materialintro')
+    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:cardview-v7:23.1.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    testCompile 'junit:junit:4.12'
 }
