--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,8 +26,8 @@
         </activity>
         <activity
             android:name=".ui.MainActivity"
-            android:screenOrientation="portrait"
-            android:launchMode="singleInstance"/>
+            android:launchMode="singleInstance"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.PhoneLoginActivity"
             android:screenOrientation="portrait" />
@@ -37,7 +37,6 @@
         <activity
             android:name=".ui.RegistValidNameActivity"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".ui.DetailsActivity"
             android:screenOrientation="portrait" />
@@ -54,19 +53,21 @@
         <activity
             android:name=".ui.MyOrderActivity"
             android:label="我的订单"
-            android:screenOrientation="portrait"
-            android:launchMode="singleInstance"/>
+            android:launchMode="singleInstance"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.ReceiveOrderActivity"
             android:label="接收订单"
-            android:screenOrientation="portrait"
-            android:launchMode="singleInstance"/>
+            android:launchMode="singleInstance"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.ReceiveDetailActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".ui.ContactActivity"
-            android:screenOrientation="portrait"></activity>
-        <activity android:name=".ui.MyorderDetailAvtivity"/>
+        <activity
+            android:name=".ui.ContactActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".ui.MyorderDetailAvtivity" />
+
     </application>
 
 </manifest>
