--- a/local.properties
+++ b/local.properties
@@ -7,8 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun May 14 09:39:39 CST 2017
+#Mon May 15 00:44:22 CST 2017
 >>>>>>>=origin/master
-sdk.dir=D\:\\Android_SDK_windows
-=\=\=\=\=\=\=
+sdk.dir=/Users/botan/Library/Android/sdk
 <<<<<<<=HEAD
+=\=\=\=\=\=\=
