修改布局以适配

--- a/local.properties
+++ b/local.properties
@@ -7,8 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu May 25 08:23:30 CST 2017
+#Tue May 30 11:58:07 CST 2017
 >>>>>>>=origin/master
-sdk.dir=D\:\\Android_SDK_windows
-=\=\=\=\=\=\=
+sdk.dir=/Users/botan/Library/Android/sdk
 <<<<<<<=HEAD
+=\=\=\=\=\=\=
