要去同步窦卓的

--- a/local.properties
+++ b/local.properties
@@ -7,21 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-<<<<<<< Updated upstream
-#Tue May 30 11:58:07 CST 2017
->>>>>>>=origin/master
+#Thu Jun 01 22:50:16 CST 2017
+>>>>>>>=Stashed changes
 sdk.dir=/Users/botan/Library/Android/sdk
-=======
-<<<<<<< Updated upstream
-#Thu May 25 08:23:30 CST 2017
->>>>>>>=origin/master
-sdk.dir=D\:\\Android_SDK_windows
-=======
-#Thu May 25 01:42:11 CST 2017
->>>>>>>=origin/master
-sdk.dir=/Users/yisheng/Library/Android/sdk
->>>>>>> Stashed changes
 =\=\=\=\=\=\=
->>>>>>> Stashed changes
 <<<<<<<=HEAD
-=\=\=\=\=\=\=
