--- a/local.properties
+++ b/local.properties
@@ -7,15 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-<<<<<<< Updated upstream
-#Sat Jun 03 14:53:06 CST 2017
->>>>>>>=master
-sdk.dir=/Users/botan/Library/Android/sdk
-=\=\=\=\=\=\=
-=======
-#Fri Jun 02 18:57:32 CST 2017
+#Sun Jun 04 16:46:46 CST 2017
 >>>>>>>=Stashed changes
-sdk.dir=/Users/yisheng/Library/Android/sdk
->>>>>>> Stashed changes
-<<<<<<<=HEAD
+sdk.dir=D\:\\Android_SDK_windows
 =\=\=\=\=\=\=
+<<<<<<<=HEAD
