--- a/local.properties
+++ b/local.properties
@@ -7,8 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Jun 04 16:46:46 CST 2017
+#Sun Jun 04 17:54:24 CST 2017
 >>>>>>>=Stashed changes
-sdk.dir=D\:\\Android_SDK_windows
-=\=\=\=\=\=\=
+sdk.dir=/Users/yisheng/Library/Android/sdk
 <<<<<<<=HEAD
+=\=\=\=\=\=\=
