--- a/local.properties
+++ b/local.properties
@@ -7,14 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-<<<<<<< HEAD
-#Sun Jun 04 17:54:24 CST 2017
->>>>>>>=Stashed changes
+#Sun Jun 04 21:38:21 CST 2017
+>>>>>>>=master
 sdk.dir=/Users/yisheng/Library/Android/sdk
-=======
-#Sun Jun 04 19:29:59 CST 2017
->>>>>>>=Stashed changes
-sdk.dir=/Users/botan/Library/Android/sdk
->>>>>>> master
-<<<<<<<=HEAD
 =\=\=\=\=\=\=
+<<<<<<<=HEAD
