--- a/local.properties
+++ b/local.properties
@@ -7,8 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Jun 04 21:38:21 CST 2017
+#Tue Jun 06 10:28:07 CST 2017
 >>>>>>>=master
-sdk.dir=/Users/yisheng/Library/Android/sdk
-=\=\=\=\=\=\=
+sdk.dir=D\:\\Android_SDK_windows
 <<<<<<<=HEAD
+=\=\=\=\=\=\=
