--- a/local.properties
+++ b/local.properties
@@ -7,8 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Jun 06 10:28:07 CST 2017
+#Tue Jun 06 16:33:05 CST 2017
 >>>>>>>=master
-sdk.dir=D\:\\Android_SDK_windows
-<<<<<<<=HEAD
+sdk.dir=/Users/yisheng/Library/Android/sdk
 =\=\=\=\=\=\=
+<<<<<<<=HEAD
