--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,7 +67,8 @@
             android:name=".ui.ContactActivity"
             android:screenOrientation="portrait" />
         <activity android:name=".ui.MyorderDetailAvtivity" />
-        <activity android:name=".ui.PersonalInfoActivity" />
+        <activity android:name=".ui.PersonalInfoActivity"
+            android:launchMode="singleInstance"/>
         <activity android:name=".personInfo.EmailChangeActivity" />
         <activity android:name=".personInfo.NicknameActivity" />
         <activity android:name=".personInfo.PhoneChangeActivity" />
