--- a/local.properties
+++ b/local.properties
@@ -7,8 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jun 08 10:31:52 CST 2017
+#Sat Jun 10 21:08:18 CST 2017
 >>>>>>>=master
-sdk.dir=D\:\\Android_SDK_windows
-=\=\=\=\=\=\=
+sdk.dir=/Users/botan/Library/Android/sdk
 <<<<<<<=HEAD
+=\=\=\=\=\=\=
