--- a/local.properties
+++ b/local.properties
@@ -7,8 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Jun 10 21:08:18 CST 2017
+#Wed Jun 14 12:32:20 CST 2017
 >>>>>>>=master
-sdk.dir=/Users/botan/Library/Android/sdk
-<<<<<<<=HEAD
+sdk.dir=D\:\\Android_SDK_windows
 =\=\=\=\=\=\=
+<<<<<<<=HEAD
