--- a/local.properties
+++ b/local.properties
@@ -7,8 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Jun 14 12:32:20 CST 2017
+#Wed Jun 14 13:57:46 CST 2017
 >>>>>>>=master
-sdk.dir=D\:\\Android_SDK_windows
-=\=\=\=\=\=\=
+sdk.dir=/Users/botan/Library/Android/sdk
 <<<<<<<=HEAD
+=\=\=\=\=\=\=
