--- a/local.properties
+++ b/local.properties
@@ -7,8 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Jun 14 15:55:41 CST 2017
+#Wed Jun 14 16:38:08 CST 2017
 >>>>>>>=master
-sdk.dir=/Users/yisheng/Library/Android/sdk
-=\=\=\=\=\=\=
+sdk.dir=D\:\\Android_SDK_windows
 <<<<<<<=HEAD
+=\=\=\=\=\=\=
